--- a/app/src/main/res/layout/message_content.xml
+++ b/app/src/main/res/layout/message_content.xml
@@ -31,14 +31,13 @@
             android:layout_marginBottom="10dp"
             android:gravity="left" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/id_msg_content_recyclerview"
+        <LinearLayout
+            android:id="@+id/images_layout"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:layout_height="wrap_content">
 
-        </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
 
     </LinearLayout>
 
