--- a/app/src/main/res/layout/message_commend_title.xml
+++ b/app/src/main/res/layout/message_commend_title.xml
@@ -16,7 +16,7 @@
 
         android:layout_weight="1"
         android:gravity="center"
-        android:text="赞" />
+        android:text="" />
 
     <TextView
         android:id="@+id/id_msg_comment_title_comment"
@@ -31,6 +31,6 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="隐藏" />
+        android:text="" />
 </LinearLayout>
 
